# sea-ice

./: .flake8  .gitignore  licence  pyproject.toml  readme.md
sea-ice/: data.py
seaice/: test.ipynb  training.py  visualisation.py
seaice/data/: __init__.py  data.py  data_loader.py
seaice/models/: __init__.py  resnet34.py  unet.py  utils.py
seaice/predict/: sliding_window.py
seaice/training/: loops.py  loss.py  runner.py
