[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sea-ice"
version = "0.1.0"
description = "Sea ice concentration prediction from SAR imagery using deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Eric Taylor" }
]

dependencies = [
    "numpy>=1.24",
    "xarray>=2023.1.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "livelossplot>=0.5",
    "matplotlib>=3.7",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
]


[tool.setuptools]
package-dir = {"" = "seaice"}

[tool.setuptools.packages.find]
where = ["seaice"]


# -------------------------
# Formatting / linting
# -------------------------

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["seaice"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]


# -------------------------
# Pytest
# -------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
